05-grafana-influxdb.yml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoring
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: grafana
    spec:
      containers:
        - name: grafana
          image: k8s.gcr.io/heapster-grafana-amd64:v4.4.3
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/ssl/certs
              name: ca-certificates
              readOnly: true
            - mountPath: /var
              name: grafana-storage
        - name: influxdb
          image: k8s.gcr.io/heapster-influxdb-amd64:v1.3.3
          volumeMounts:
            - mountPath: /data
              name: influxdb-storage
      volumes:
        - name: ca-certificates
          hostPath:
            path: /etc/ssl/certs
        - name: influxdb-storage
          persistentVolumeClaim:
            claimName: monitoring-influxdb
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: monitoring-grafana
---

apiVersion: v1
kind: Service
metadata:
  labels:
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: monitoring-grafana
  name: monitoring-grafana
  namespace: kube-system
spec:
  # In a production setup, we recommend accessing Grafana through an external Loadbalancer
  # or through a public IP.
  # type: LoadBalancer
  # You could also use NodePort to expose the service at a randomly-generated port
  # type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    k8s-app: grafana
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - secretName: monitoring-antimatter-studios-com
      hosts:
        - "monitoring.antimatter-studios.com"
  rules:
    - host: monitoring.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: monitoring-grafana
              servicePort: 80
