08-grafana-ingress.yaml
# You first need to install the prometheus project described in the readme for this to work correctly

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: tls-monitoring-antimatter-studios-com
      hosts:
        - "monitoring.antimatter-studios.com"
  rules:
    - host: monitoring.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
