08d-gitlab-app.yml

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  serviceName: gitlab
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: gitlab-data
        namespace: gitlab
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
        selector:
          matchLabels:
            volume-name: gitlab-data
    - metadata:
        name: gitlab-postgres
        namespace: gitlab
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        selector:
          matchLabels:
            volume-name: gitlab-postgres
    - metadata:
        name: gitlab-docker-registry
        namespace: gitlab
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 25Gi
        selector:
          matchLabels:
            volume-name: gitlab-docker-registry
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: sameersbn/gitlab:10.5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 22
              name: ssh
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: gitlab-data
              mountPath: /home/git/data
            - name: certs
              mountPath: /certs
        - name: postgresql
          image: sameersbn/postgresql:9.6-2
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: gitlab-postgres
              mountPath: /var/lib/postgresql
          livenessProbe:
            exec:
              command: ["pg_isready","-h","localhost","-U","postgres"]
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["pg_isready","-h","localhost","-U","postgres"]
            initialDelaySeconds: 5
            timeoutSeconds: 1
        - name: redis
          image: sameersbn/redis
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 5
            timeoutSeconds: 1
        - name: registry
          image: registry:latest
          ports:
            - name: registry
              containerPort: 5000
          volumeMounts:
            - name: gitlab-docker-registry
              mountPath: /registry
            - name: certs
              mountPath: /certs
      volumes:
        - name: certs
          emptyDir: {}

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gitlab-ci-runner
  namespace: gitlab
  labels:
    app: gitlab-ci-runner
spec:
  updateStrategy:
    type: RollingUpdate
  replicas: 2
  serviceName: gitlab-ci-runner
  template:
    metadata:
      labels:
        app: gitlab-ci-runner
    spec:
# These rules appear to tell kubernetes to schedule each pod on different nodes
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - topologyKey: "kubernetes.io/hostname"
#              labelSelector:
#                matchExpressions:
#                  - key: app
#                    operator: In
#                    values:
#                      - gitlab-ci-runner
      volumes:
      - name: gitlab-ci-runner-scripts
        projected:
          sources:
            - configMap:
                name: gitlab-ci-runner-scripts
                items:
                  - key: run.sh
                    path: run.sh
                    mode: 0755
      serviceAccountName: gitlab-ci
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        supplementalGroups: [999]
      containers:
      - image: gitlab/gitlab-runner:v10.5.0
        name: gitlab-ci-runner
        command:
          - /scripts/run.sh
        ports:
          - containerPort: 9100
            name: http-metrics
            protocol: TCP
        volumeMounts:
          - name: gitlab-ci-runner-scripts
            mountPath: "/scripts"
            readOnly: true
      restartPolicy: Always
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: ssh
      port: 10022
      targetPort: 22
    - name: registry
      port: 5000
      targetPort: 5000

---

# -- Ingress configuration for Gitlab
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: tls-gitlab-antimatter-studios-com
      hosts:
        - "gitlab.antimatter-studios.com"
    - secretName: tls-registry-gitlab-antimatter-studios-com
      hosts:
        - "registry.gitlab.antimatter-studios.com"
  rules:
    - host: gitlab.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: 80
    - host: ssh.gitlab.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: 10022
    - host: registry.gitlab.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: 5000
---
