zzz_06d-gitlab-app-old.yml
# -- Gitlab should be installed in it's own namespace, so when it becomes a multi-container group, it'll be isolated
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---

# -- Deployment of the docker container
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:10.2.8-ce.0
          volumeMounts:
            - name: config
              mountPath: /etc/gitlab
            - name: logs
              mountPath: /var/log/gitlab
            - name: data
              mountPath: /var/opt/gitlab
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
            - containerPort: 22
              name: ssh

        - name: postgres
          image: postgres:10-alpine
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgres/data
        - name: redis
          image: redis:4.0.7-alpine

      volumes:
        - name: init-config
          configMap:
            name: gitlab-init-config
        - name: config
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: logs
          persistentVolumeClaim:
            claimName: gitlab-logs
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-data
        - name: postgres
          persistentVolumeClaim:
            claimName: gitlab-postgres
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
    - port: 22
      targetPort: 22
      name: ssh
---

# -- Ingress configuration for Gitlab
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: git.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: 80
